--- a/features/features-yangtools-experimental/pom.xml
+++ b/features/features-yangtools-experimental/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>features-yangtools-experimental</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>feature</packaging>
     <name>OpenDaylight :: Yangtools :: Experimental Features</name>
     <description>YANG Tools Experimental Features</description>
