--- a/features/odl-exp-objcache/pom.xml
+++ b/features/odl-exp-objcache/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>odl-exp-objcache</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>feature</packaging>
     <name>OpenDaylight :: Yangtools :: Experimental :: Object Cache</name>
 
