--- a/features/odl-triemap/pom.xml
+++ b/features/odl-triemap/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>odl-triemap</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>feature</packaging>
     <name>OpenDaylight :: Yangtools :: TrieMap</name>
     <description>Concurrent hash-trie implementation</description>
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yangtools-artifacts</artifactId>
-                <version>2.0.0</version>
+                <version>2.0.1-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
