--- a/features/odl-yangtools-parser/pom.xml
+++ b/features/odl-yangtools-parser/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>odl-yangtools-parser</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>feature</packaging>
     <name>OpenDaylight :: Yangtools :: Parser </name>
     <description>YANG parser reference implementation</description>
