--- a/features/odl-yangtools-xpath/pom.xml
+++ b/features/odl-yangtools-xpath/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>odl-yangtools-xpath</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>feature</packaging>
     <name>OpenDaylight :: Yangtools :: XPath support</name>
     <description>XPath support for YANG-modeled data</description>
