--- a/project.config
+++ b/project.config
@@ -40,4 +40,7 @@
 	mergeContent = false
 	action = rebase if necessary
 [access "refs/heads/v1.2.x"]
+	submit = group Release Engineering Team
 	submit = block group Registered Users
+	label-Code-Review = -2..+2 group Release Engineering Team
+	label-Verified = -1..+1 group Release Engineering Team
