--- a/project.config
+++ b/project.config
@@ -5,37 +5,11 @@
 	requireChangeId = true
 [access "refs/*"]
 	owner = group ldap/gerrit-yangtools-commiters
-	read = group Administrators
 	read = group Anonymous Users
-	read = group GitHub Replication
-	read = group Non-interactive yangtools users
-	read = group Registered Users
-	read = group ldap/gerrit-yangtools-commiters
-	forgeAuthor = group ldap/gerrit-yangtools-commiters
 [access "refs/for/refs/*"]
-	push = group Registered Users
-	push = group ldap/gerrit-yangtools-commiters
-	rebase = group ldap/gerrit-yangtools-commiters
+	rebase = group Project Owners
 [access "refs/heads/*"]
-	label-Code-Review = -2..+2 group ldap/gerrit-yangtools-commiters
-	label-Code-Review = -1..+1 group Non-interactive yangtools users
-	label-Code-Review = -1..+1 group Registered Users
-	label-Verified = -1..+1 group Non-interactive yangtools users
-	label-Verified = -1..+1 group ldap/gerrit-yangtools-commiters
-	submit = group ldap/gerrit-yangtools-commiters
-	create = group Non-interactive yangtools users
-	forgeAuthor = group Non-interactive yangtools users
-	forgeCommitter = group Non-interactive yangtools users
-	push = group Non-interactive yangtools users
-	pushMerge = group Non-interactive yangtools users
-	rebase = group ldap/gerrit-yangtools-commiters
-[access "refs/tags/*"]
-	pushTag = group Non-interactive yangtools users
-	pushTag = +force group ldap/gerrit-yangtools-commiters
-	create = group ldap/gerrit-yangtools-commiters
-	forgeCommitter = group Non-interactive yangtools users
-	push = group Non-interactive yangtools users
-	push = +force group ldap/gerrit-yangtools-commiters
+	rebase = group Project Owners
 [submit]
 	mergeContent = false
 	action = rebase if necessary
