Simplify ACLs per best practices
Signed-off-by: Andrew Grimberg <agrimberg@linuxfoundation.org>

--- a/project.config
+++ b/project.config
@@ -5,7 +5,7 @@
 	requireChangeId = true
 [access "refs/*"]
 	owner = group ldap/gerrit-yangtools-commiters
-	read = group Anonymous Users
+	read = group GitHub Replication
 [access "refs/for/refs/*"]
 	rebase = group Project Owners
 [access "refs/heads/*"]
