Added superproject subscription during upgrade

--- a/project.config
+++ b/project.config
@@ -14,4 +14,4 @@
 	mergeContent = false
 	action = rebase if necessary
 [allowSuperproject "releng/autorelease"]
-	matching = refs/heads/stable/lithium:refs/heads/stable/lithium
+	matching = refs/heads/v1.2.x:refs/heads/stable/nitrogen
