--- a/project.config
+++ b/project.config
@@ -14,4 +14,4 @@
 	mergeContent = false
 	action = rebase if necessary
 [allowSuperproject "releng/autorelease"]
-	matching = refs/heads/stable/boron:refs/heads/stable/boron
+	matching = refs/heads/stable/carbon:refs/heads/stable/carbon
