Added superproject subscription during upgrade

--- a/project.config
+++ b/project.config
@@ -14,4 +14,4 @@
 	mergeContent = false
 	action = rebase if necessary
 [allowSuperproject "releng/autorelease"]
-	matching = refs/heads/stable/beryllium:refs/heads/stable/beryllium
+	matching = refs/heads/stable/boron:refs/heads/stable/boron
