Added superproject subscription during upgrade

--- a/project.config
+++ b/project.config
@@ -13,3 +13,5 @@
 [submit]
 	mergeContent = false
 	action = rebase if necessary
+[allowSuperproject "releng/autorelease"]
+	matching = refs/heads/stable/beryllium:refs/heads/stable/beryllium
