Expand yang-parser-spi unit tests
This patch adds a very basic unit test suite to assert various
aspects of the SPI package.

Change-Id: Ifd68fad33bff3b74579202327b28822b8ce5626d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/yang/yang-parser-spi/pom.xml
+++ b/yang/yang-parser-spi/pom.xml
@@ -49,6 +49,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>yang-model-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>mockito-configuration</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
