YANGTOOLS-766: expand test suite
This patch adds explicit tests for serialization/deserialization
of instance identifiers for both JSONCodecFactorySuppliers.

Change-Id: Id1ba4764573bf2bde566c89c28e2ffc55cb982dc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/yang/yang-data-codec-gson/pom.xml
+++ b/yang/yang-data-codec-gson/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>mockito-configuration</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
