--- a/project.config
+++ b/project.config
@@ -15,3 +15,5 @@
 	action = rebase if necessary
 [allowSuperproject "releng/autorelease"]
 	matching = refs/heads/v1.2.x:refs/heads/stable/nitrogen
+[access "refs/tags/*"]
+	createSignedTag = group Release Engineering Team
