Modify access rules

--- a/project.config
+++ b/project.config
@@ -17,3 +17,4 @@
 	matching = refs/heads/v1.2.x:refs/heads/stable/nitrogen
 [access "refs/tags/*"]
 	createSignedTag = group Release Engineering Team
+	push = group Release Engineering Team
