--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -26,6 +26,11 @@
         <dependencies>
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>checkstyle-logging</artifactId>
+                <version>2.0.2-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-data-util</artifactId>
                 <version>2.0.2-SNAPSHOT</version>
             </dependency>
