--- a/yang/yang-data-jaxen/pom.xml
+++ b/yang/yang-data-jaxen/pom.xml
@@ -64,6 +64,7 @@
         <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
