--- a/yang/yang-parser-impl/pom.xml
+++ b/yang/yang-parser-impl/pom.xml
@@ -117,6 +117,7 @@
         <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
