WIP: add yang-common-jackson
This provides Jackson datatype bindings for yang.common types,
so that Empty, Uint8 et al. can be used with Jackson.

// FIXME: figure out XML vs JSON encoding of Uint64
// FIXME: figure out XML vs JSON encoding of Empty
// FIXME: decimal64
// FIXME: figure out error reporting

Change-Id: Ie7eee42e66c04ae47cf82f38a7d95e2a5377301f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -310,6 +310,11 @@
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-common-jackson</artifactId>
+                <version>8.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-common-netty</artifactId>
                 <version>8.0.0-SNAPSHOT</version>
             </dependency>
@@ -438,6 +443,13 @@
             </dependency>
 
             <!-- Experimental features -->
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>odl-yangtools-exp-jackson</artifactId>
+                <version>0.1.3-SNAPSHOT</version>
+                <type>xml</type>
+                <classifier>features</classifier>
+            </dependency>
 
             <!-- Documentation -->
             <dependency>
