Remove remove yang-maven-plugin interfaces
yang2sources.spi package has been deprecated for a long time, remove
it. This will allow us to properly control file lifecycle and perform
correct incremental builds.

JIRA: YANGTOOLS-747
Change-Id: I5e3acf0df97a33e7507841a549fa7109b48c16c3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/plugin/plugin-generator-api/pom.xml
+++ b/plugin/plugin-generator-api/pom.xml
@@ -39,4 +39,20 @@
             <artifactId>yang-repo-api</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
