Migrate concepts to bnd-parent
A straightforward migration to use bnd-maven-plugin.

Change-Id: Ie8bb442046b611eeec072a3e4f18eb98f955ef80
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>features</module>
 
         <module>benchmarks</module>
+        <module>bnd-parent</module>
         <module>bundle-parent</module>
         <module>codec</module>
         <module>common</module>
