--- a/bnd-parent/pom.xml
+++ b/bnd-parent/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- vi: set et smarttab sw=4 tabstop=4: -->
 <!--
- Copyright (c) 2018 Pantheon Technologies, s.r.o. and others.  All rights reserved.
+ Copyright (c) 2022 PANTHEON.tech, s.r.o. and others.  All rights reserved.
 
  This program and the accompanying materials are made available under the
  terms of the Eclipse Public License v1.0 which accompanies this distribution,
@@ -11,17 +11,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>bundle-parent</artifactId>
-        <version>9.0.11</version>
+        <artifactId>bnd-parent</artifactId>
+        <version>9.0.12</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>bundle-parent</artifactId>
+    <artifactId>bnd-parent</artifactId>
     <version>8.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    <description>Bundle parent (felix-based)</description>
+    <description>Bundle parent (bnd-based)</description>
 
     <dependencyManagement>
         <dependencies>
