--- a/bnd-parent/pom.xml
+++ b/bnd-parent/pom.xml
@@ -11,17 +11,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>bundle-parent</artifactId>
+        <artifactId>bnd-parent</artifactId>
         <version>9.0.8</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>bundle-parent</artifactId>
+    <artifactId>bnd-parent</artifactId>
     <version>8.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    <description>Bundle parent (felix-based)</description>
+    <description>Bundle parent (bnd-based)</description>
 
     <dependencyManagement>
         <dependencies>
