Correct bundle-parent's coordinates
We are inheriting SCM section from odlparent, make sure we add an
override.

Change-Id: If73f8b047a703dc7c5b8a3ec43a6825b0f85c76c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/bundle-parent/pom.xml
+++ b/bundle-parent/pom.xml
@@ -34,4 +34,11 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <scm>
+        <connection>scm:git:ssh://git.opendaylight.org:29418/yangtools.git</connection>
+        <developerConnection>scm:git:ssh://git.opendaylight.org:29418/yangtools.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://wiki.opendaylight.org/display/ODL/YANG+Tools</url>
+    </scm>
 </project>
