--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -235,6 +235,15 @@
 
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>xsd-regex</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>xsd-regex-antlr</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>util</artifactId>
         </dependency>
 
