WiP: Add class for testing lists
Also use it to test the simple impl.

Change-Id: Icdec72af525ecb0d9c404eb738197a6613cbc77e
Signed-off-by: Vratko Polak <vratko.polak@gmail.com>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -46,6 +46,11 @@
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-data-api-testing</artifactId>
+                <version>8.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-data-spi</artifactId>
                 <version>8.0.0-SNAPSHOT</version>
             </dependency>
