--- a/data/yang-data-impl/pom.xml
+++ b/data/yang-data-impl/pom.xml
@@ -99,6 +99,11 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-api-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-parser-spi</artifactId>
             <scope>test</scope>
         </dependency>
