WiP: Add class for testing lists
Also use it to test the simple impl.

TODO: Maybe use test-jars?
TODO: Move datatypes out of yang/data for easier downstream consumption?

Change-Id: Icdec72af525ecb0d9c404eb738197a6613cbc77e
Signed-off-by: Vratko Polak <vratko.polak@gmail.com>

--- a/data/pom.xml
+++ b/data/pom.xml
@@ -29,6 +29,7 @@
 
     <modules>
         <module>yang-data-api</module>
+        <module>yang-data-api-testing</module>
         <module>yang-data-impl</module>
         <module>yang-data-spi</module>
         <module>yang-data-transform</module>
