Do not depend on osg.annotation
We are using split-out OSGi bundles, make sure our dependencies are
correct.

Change-Id: Iddec9156698f26919c45dabe98d27e16c9480d3c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/common/concepts/pom.xml
+++ b/common/concepts/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.annotation</artifactId>
+            <artifactId>org.osgi.annotation.bundle</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
