--- a/common/yang-common/pom.xml
+++ b/common/yang-common/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.annotation</artifactId>
+            <artifactId>org.osgi.annotation.bundle</artifactId>
         </dependency>
     </dependencies>
 </project>
