Do no use osgi.cmpn
org.osgi.service.component.annotations provides a properly-broken out
annotations, use those instead of the entire compendium.

Change-Id: Idba9b56a392843bc65543b430829a25d7d629979
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/parser/yang-parser-impl/pom.xml
+++ b/parser/yang-parser-impl/pom.xml
@@ -123,7 +123,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
         </dependency>
         <dependency>
             <groupId>com.guicedee.services</groupId>
