Export org.opendaylight.yangtools.yang.data.tree.impl.di
Downstreams are not ready for us shutting down access to this package
in OSGi world. Make sure it is exported.

Change-Id: Iadce73e45f622a7bb496ba29643f4f84baff9150
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/data/yang-data-tree-ri/pom.xml
+++ b/data/yang-data-tree-ri/pom.xml
@@ -66,4 +66,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>
+                            org.opendaylight.yangtools.yang.data.tree.impl.di,
+                            org.opendaylight.yangtools.yang.data.tree.leafref
+                        </Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
