--- a/features/odl-yangtools-data-api/pom.xml
+++ b/features/odl-yangtools-data-api/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>10.0.0</version>
+        <version>10.0.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
