--- a/karaf/pom.xml
+++ b/karaf/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>karaf4-parent</artifactId>
-        <version>10.0.0</version>
+        <version>10.0.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
