--- a/plugin/yang-maven-plugin/pom.xml
+++ b/plugin/yang-maven-plugin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>odlparent</artifactId>
-        <version>10.0.0</version>
+        <version>10.0.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
