Add support for RFC8819 "module-tag" extension
Improved:
 - Build schema context successfully recognizes
   ModuleTagEffectiveStatementImpl object - raw representation in yang
   file(tags:module-tag "ietf:some-new-tag";)

JIRA: YANGTOOLS-1315
Change-Id: I5ce2ce7ae57febf80c71de68bc37422e5a5431f7
Signed-off-by: ivan.martiniak <ivan.martiniak@pantheon.tech>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -287,6 +287,17 @@
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>rfc8819-model-api</artifactId>
+                <version>8.0.3-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>rfc8819-parser-support</artifactId>
+                <version>8.0.3-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>rfc8639-model-api</artifactId>
                 <version>8.0.3-SNAPSHOT</version>
             </dependency>
