--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -51,6 +51,7 @@
         <module>rfc8040-parser-support</module>
         <module>rfc8528-parser-support</module>
         <module>rfc8639-parser-support</module>
+        <module>rfc8819-parser-support</module>
 
         <!-- Support for OpenDaylight YANG extensions -->
         <module>odlext-parser-support</module>
