--- a/common/util/pom.xml
+++ b/common/util/pom.xml
@@ -56,6 +56,8 @@
         <dependency>
             <groupId>org.gaul</groupId>
             <artifactId>modernizer-maven-annotations</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.immutables</groupId>
