--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -165,6 +165,11 @@
                 <version>15.0.0-SNAPSHOT</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-xml</artifactId>
+                <version>13.0.6-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
