--- a/plugin/yang-maven-plugin-it/pom.xml
+++ b/plugin/yang-maven-plugin-it/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>odlparent</artifactId>
-        <version>14.0.5</version>
+        <version>14.0.6</version>
         <relativePath/>
     </parent>
 
@@ -24,6 +24,7 @@
     <properties>
         <!-- We are doing abhorrent things here unpacking our dependencies, which confuses analysis, just skip it -->
         <odlparent.dependency.skip>true</odlparent.dependency.skip>
+        <odlparent.modernizer.enforce>false</odlparent.modernizer.enforce>
     </properties>
 
     <dependencies>
