--- a/data/yang-data-tree-ri/pom.xml
+++ b/data/yang-data-tree-ri/pom.xml
@@ -100,6 +100,10 @@
 
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>mockito-configuration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-parser-spi</artifactId>
             <scope>test</scope>
         </dependency>
