--- a/features/odl-yangtools-export/pom.xml
+++ b/features/odl-yangtools-export/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>feature-parent</artifactId>
-        <version>13.0.9</version>
+        <version>13.0.10-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
 
