--- a/features/pom.xml
+++ b/features/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.opendaylight.yangtools</groupId>
     <artifactId>features</artifactId>
-    <version>13.0.9</version>
+    <version>13.0.10-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
