--- a/binding/binding-data-codec-api/pom.xml
+++ b/binding/binding-data-codec-api/pom.xml
@@ -11,13 +11,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.yangtools</groupId>
-        <artifactId>bundle-parent</artifactId>
+        <artifactId>bnd-parent</artifactId>
         <version>14.0.8-SNAPSHOT</version>
-        <relativePath>../../bundle-parent</relativePath>
+        <relativePath>../../bnd-parent</relativePath>
     </parent>
 
     <artifactId>binding-data-codec-api</artifactId>
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
+    <name>${project.artifactId}</name>
     <description>API definitions of YANG Binding/yang-data-api codec</description>
 
     <properties>
